# aphid

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
default-theme/: theme.toml
default-theme/static/css/: theme.css
default-theme/templates/: 404.html  base.html  blog_index.html  blog_post.html  home.html  tag.html  wiki_index.html  wiki_page.html
docs/: aphid.toml
docs/content/: 404.md  home.md  wiki.md
docs/content/blog/: 2026-04-23_aphid.md  2026-04-26_theme-creation-claude-design.md  2026-04-28_v0-1.md  2026-04-30_v0-1-1.md  2026-05-01_v0-1-2.md  2026-05-06_v0-2.md  (+5 more)
docs/static/: CNAME
docs/theme/: theme.toml
src/: cli.rs  config.rs  error.rs  html.rs  lib.rs  main.rs  output.rs  scaffold.rs  testutil.rs
src/agent/: claude.rs  codex.rs  copilot.rs  mod.rs
src/artifacts/: feed.rs  mod.rs  robots.rs  sitemap.rs
src/content/: frontmatter.rs  mod.rs  page.rs  site.rs  slug.rs
src/markdown/: alerts.rs  anchors.rs  external_links.rs  highlight.rs  mod.rs  relative_urls.rs  rendered.rs  wikilinks.rs
src/render/: context.rs  mod.rs  theme.rs
src/serve/: livereload.rs  mod.rs  rebuilder.rs  server.rs  state.rs  watcher.rs
tests/: build_e2e.rs  load_site.rs  markdown_pipeline.rs  scaffold_e2e.rs  serve_e2e.rs
tests/common/: mod.rs
tests/snapshots/: build_e2e__tags_rust_main.snap  build_e2e__wiki_glossary_main.snap  markdown_pipeline__snapshot_glossary_wiki_page.snap  markdown_pipeline__snapshot_hello_blog_post.snap  markdown_pipeline__snapshot_internals_wiki_page.snap
(+48 files in other folders)
