[package]
name = "aphid"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A static site generator for blogs and wikis, with wiki-links across both."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LHelge/aphid"
homepage = "https://aphid.lhelge.se"
keywords = ["static-site-generator", "ssg", "blog", "wiki", "markdown"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "docs/",
    "CLAUDE.md",
    ".github/",
    ".claude/",
]

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
notify = "8.2.0"
pulldown-cmark = "0.13.3"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
syntect = "5.3.0"
tera = "1.20.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
futures-util = "0.3.32"
insta = "1.47.2"
reqwest = "0.13.2"
tempfile = "3.27.0"
tokio-tungstenite = "0.29.0"
walkdir = "2.5.0"
